feat(backend & mobile): check my todolist please :D
