# backend/swagger/swagger-output.json
@@ -17,6 +17,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -28,6 +31,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -66,6 +72,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -87,6 +96,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -123,6 +135,30 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/user-infos/check": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -162,7 +198,10 @@
         },
         "required": [
           "contactLink",
-          "meetingLink"
+          "meetingLink",
+          "position",
+          "institution",
+          "description"
         ]
       },
       "UpdateMentorshipDTO": {
@@ -186,7 +225,10 @@
         },
         "required": [
           "contactLink",
-          "meetingLink"
+          "meetingLink",
+          "position",
+          "institution",
+          "description"
         ]
       }
     }
